# Tecdron

./: README.md
tecdron_ros2_humble/: docker-compose-nvidia-ros-humble.yml  docker-compose.yml  dockerfile_dev  dockerfile_nvidia_ros_humble  dockerfile_nvidia_tecdron_humble  readme.md
tecdron_ros2_humble/Matlab Simulations/Controller/: controle1.mat  robust_control.m
tecdron_ros2_humble/Matlab Simulations/Model/: RobustController_Test.slx  test.m
tecdron_ros2_humble/Matlab Simulations/Modelo com Deslizamento/: Eq_Mov.m  Esforcos.m  Modelo_Longitudinal.slx  Modelo_Longitudinal.slx.r2020b  Modelo_Longitudinal.slxc  Modelo_Longitudinal_sem_Estimacao.slx  Modelo_Longitudinal_sem_Estimacao.slxc  Saidas.m  SemControle.slx  SemControle.slxc  Velocidade.m  teste_planta_simplificado.slx  teste_planta_simplificado.slx.r2020b  tilde.m  varglobal.m  (+2 more)
tecdron_ros2_humble/custom_interfaces/: CMakeLists.txt  package.xml
tecdron_ros2_humble/kalman_filters/: CMakeLists.txt
tecdron_ros2_humble/mecanum_drive_controller/: CMakeLists.txt
tecdron_ros2_humble/plot/: package.xml  setup.cfg  setup.py
tecdron_ros2_humble/robot_description/: CMakeLists.txt  package.xml
tecdron_ros2_humble/robot_gazebo/: CMakeLists.txt  package.xml
tecdron_ros2_humble/state_stimation/: CMakeLists.txt  package.xml
tecdron_ros2_humble/tecdron_controller/: CMakeLists.txt  package.xml  tecdron_controller.xml
tecdron_ros2_humble/wheel_control/: CMakeLists.txt  package.xml
tecdron_ros2_humble/wheel_control/src/: ss_control.cpp
tecdron_ros2_humble/wheel_odometry/: CMakeLists.txt  package.xml
(+230 files in other folders)
